Fixed misaligned text on some action buttons

--- a/src/scss/pages/_project.resolve.scss
+++ b/src/scss/pages/_project.resolve.scss
@@ -91,6 +91,7 @@ section#actions {
             cursor: pointer;
             font: 500 0.95rem Arial;
             justify-content: center;
+            text-align: center;
             align-items: center;
             box-shadow: 0 2px 0 #666;
             border-radius: 0.125rem 0.125rem 0 0;
